<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.zeevox.recorder.HelpActivity"
    tools:showIn="@layout/activity_help">

    <TextView
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/help_permissions_title"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textHelpPermissionsTitle"
        android:layout_alignParentStart="true" />

    <TextView
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingTop="12dp"
        android:text="@string/help_permissions"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textHelpPermissions"
        android:layout_below="@id/textHelpPermissionsTitle"
        android:layout_alignParentStart="true" />

    <TextView
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/help_give_feedback_title"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textHelpFeedbackTitle"
        android:layout_below="@+id/textHelpPermissions"
        android:layout_alignParentStart="true" />

    <TextView
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingTop="12dp"
        android:text="@string/help_give_feedback"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textHelpFeedback"
        android:layout_below="@+id/textHelpFeedbackTitle"
        android:layout_alignParentStart="true" />


</RelativeLayout>
